quran ui WAY BETTER LESGo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700&family=Noto+Sans+Arabic:wght@400;500;600;700&family=Noto+Sans+Kurdish:wght@400;500;600;700&display=swap" rel="stylesheet">
     <!-- Add Scheherazade New font for Quranic Arabic text -->
     <link href="https://fonts.googleapis.com/css2?family=Scheherazade+New:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Add Amiri font for Quranic Arabic text -->
+    <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
