--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <base href="/" />
     <link rel="icon" type="image/png" href="./src/assets/7sanah_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quran Khatmah</title>
+    <title>7sanah</title>
     <!-- Add fonts that support Arabic, Kurdish, and Persian -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
